# -*- coding: utf-8 -*-
[metadata]
name = tutorial_app
summary = description
description-file =
    README.md
author = Wout Decrop
author-email = woutdec@hotmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/woutdecrop/tutorial_app
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tutorial_app

[entry_points]
deepaas.v2.model =
    tutorial_app = tutorial_app.api
